<resources xmlns:tools="http://schemas.android.com/tools">


    <string name="app_name">Cocoon</string>

    <string name="item_name">item_name</string>
    <string name="item_price">item_price</string>
    <string name="Description">Description</string>
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="cash">cash</string>
    <string name="save">Save</string>
    <string name="total">Total :</string>
    <string name="quantity">Quantity :</string>
    <string name="item_details">Item details</string>
    <string name="buy">Buy</string>
    <string name="price">price</string>
    <string name="date_and_time">date and time</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="password">password <font color='#FF0000'>*</font></string>
    <string name="signin">Sign In</string>
    <string name="add_image">add image</string>
    <string name="fullname">fullname <font color='#FF0000'>*</font></string>
    <string name="country">country <font color='#FF0000'>*</font></string>
    <string name="username">username <font color='#FF0000'>*</font></string>
    <string name="re_password">ReEnter password <font color='#FF0000'>*</font></string>
    <string name="birthdate">BirthDate <font color='#FF0000'>*</font></string>
    <string name="phone">phone <font color='#FF0000'>*</font></string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="change_password">change password</string>
    <string name="add_new_item">add new Item</string>
    <string name="item_added"> Click More to edit product in cart </string>


    <string name="_9">9</string>
    <string name="enter_new_password">enter new password <font color='#FF0000'>*</font></string>
    <string name="re_enter_password">re enter password <font color='#FF0000'>*</font></string>
    <string name="enter_old_password">enter old password <font color='#FF0000'>*</font></string>
    <string name="new_pass">new pass</string>
    <string name="con_call">Call us</string>
    <string name="con_fac">Our Facebook Page</string>
    <string name="con_site">Visit UCAS site</string>
    <string name="con_email">Contact by Gmail</string>
    <string name="con_back">BACK</string>
    <string name="con_contact">Contact us by :</string>
    <string name="adresss">Adresss</string>
    <string name="register">register</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="cam">capture image from camera</string>
    <string name="about">About APP</string>
    <string name="gall">import your image from gallery</string>
    <string name="call">Call us</string>
    <string name="fac">Our Facebook Page</string>
    <string name="site">Visit UCAS site</string>
    <string name="email">Email <font color='#FF0000'>*</font></string>
    <string name="back">BACK</string>
    <string name="contact">Contact us by :</string>
    <string name="image">set your image :</string>
    <string name="phone_number">phone number</string>
    <string name="RegisterHint">Don’t have an accunt ?</string>
    <string name="shop_now">Shop Now</string>
     <string name="hoodie_name">Hoodie Name</string>
    <string name="color">Color</string>
     <string name="size">Size</string>
    <string name="rating">Rating</string>
    <string name="reviews">Reviews</string>
    <string name="best_sell">Best Sell</string>
    <string name="see_all_Products">See All Products </string>
    <string name="see_all_bestSell">See All </string>
    <string name="categories">Categories</string>
    <string name="WellcomShop">Wellcome to CoCoon Shop</string>
    <string name="explore_us">Explore Us</string>
    <string name="product_name">Product Name</string>
    <string name="old_price">Old Price</string>
    <string name="description">Description</string>
    <string name="add_product">Add Product</string>
    <string name="skip">Skip</string>

    //walkthrought
    //Headings
    <string name="heading_one">Shop Online From Home</string>
    <string name="heading_two">Opinions Are Important</string>
    <string name="heading_three">Fast Delivery</string>
    <string name="heading_fourth">Pay Cash</string>

    //Description
    <string name="desc_one">Figure out what is new in the store and shop from you home </string>
    <string name="desc_two">give us a feedback , reviews and select your favourites</string>
    <string name="desc_three">we will never be late , just order and it will be faster than you think</string>
    <string name="desc_fourth">no need to refund if anything went wrong , pay cash and get  your order directly</string>
    <string name="discount"> Discount of Most Products</string>
    <string name="eid_offer">EID OFFER !</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="communicate">Communicate</string>
    <string name="share_app">Share App</string>
    <string name="administrator">administrator</string>
    <string name="cart">Cart</string>
    <string name="my_name">FullName</string>
    <string name="cart_items">cart Items</string>
    <string name="total_payment">Total Payment</string>
    <string name="buy_now">BUY NOW</string>
    <string name="dec_paragraph">description</string>


    //dialogs
    <string name="close_app">Close app</string>
    <string name="dialog_message">AlerDialog</string>
    <string name="dialog_title">GBAndroidBlogs</string>
    <string name="success">Success</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>

    <string name="cart_add_success">Cart Is Updated</string>
    <string name="cart_text">Added to cart Successfully</string>

    <string name="connection_error">Connection Error</string>
    <string name="connection_error_text">seem like you have no internet connection in your device</string>

    <string name="change_user_password">Change User Password </string>

    <string name="warning_title">Warning Title</string>
    <string name="error_title">Error Title</string>


    <string name="okay">Okay</string>
    <string name="tryAgain">Try Again</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>




</resources>