<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Personal">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="@string/home" />
            <item
                android:id="@+id/profile"
                android:icon="@drawable/ic_baseline_person_24"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_favs"
                android:icon="@drawable/ic_favorite_border"
                android:title="@string/favourites" />
            <item
                android:id="@+id/nav_cart"
                android:icon="@drawable/ic_cart"
                android:title="@string/cart" />

            <item
                android:id="@+id/nav_contactUs"
                android:icon="@drawable/ic_contactus"
                android:title="@string/contact_us" />
        </menu>
     </item>

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="@string/sign_out" />
        </menu>
    </item>


</menu>