<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_5sdp"
    android:id="@+id/drawer_layout"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivities.ContactUsActicity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_5sdp"
        android:orientation="vertical"
        android:background="@drawable/gradient_background">


        <include
            android:id="@+id/app_bar"
            layout="@layout/toolbar"
            app:layout_constraintTop_toTopOf="parent"/>


        <com.facebook.shimmer.ShimmerFrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:shimmer_shape="linear"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_80sdp"
            android:id="@+id/shimmer_frame_layout">

            <TextView
                android:id="@+id/textView"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:background="@drawable/whitesquare"
                android:text="@string/contact"
                android:textSize="@dimen/_20ssp"
                android:fontFamily="@font/dancing_script_bold"
                android:textColor="@color/Darkpink" />

        </com.facebook.shimmer.ShimmerFrameLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_call"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/whitesquare"
            android:drawableLeft="@drawable/ic_baseline_call_24"
            android:textColor="@color/Darkpink"
            android:padding="@dimen/padding10"
            android:text="@string/phone_number"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/cheerfulyellow"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_facebook"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/whitesquare"
            android:drawableLeft="@drawable/ic_baseline_facebook_24"
            android:fontFamily="@font/cheerfulyellow"
            android:padding="@dimen/padding10"
            android:text="@string/fac"
            android:textColor="@color/Darkpink"
            android:textSize="@dimen/_12ssp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_website"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/whitesquare"
            android:drawableLeft="@drawable/ic_app_store"
            android:padding="@dimen/padding10"
            android:text="@string/site"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/Darkpink"
            android:fontFamily="@font/cheerfulyellow"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_gmail"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/whitesquare"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:fontFamily="@font/cheerfulyellow"
            android:padding="@dimen/padding10"
            android:text="@string/email"
            android:textColor="@color/Darkpink"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>
    </LinearLayout>
        </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/my_navigation_items"
        app:itemIconTint="@color/black"
        android:visibility="visible"/>

</androidx.drawerlayout.widget.DrawerLayout>

